# location-tracking-service

./: .coveragerc  .env.example  .flake8  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  logging.ini  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
alembic/: Dockerfile  env.py
app/: config.py  custom_docs.py  initialization.py  main.py
app/api/: auth.py  healthcheck.py  users.py
app/api/v1/: auth.py  groups.py  users.py
app/core/: exception_handlers.py  logger.py  router.py  security.py
app/db/: __init__.py  base.py  redis.py  session.py
app/dependencies/: __init__.py  auth.py  db.py  group.py
app/exceptions/: __init__.py  base.py  dynamic_exceptions.py  exception_config.ini
app/models/: group.py  membership.py  user.py
app/schemas/: base.py  group.py  response.py  token.py  user.py  websocket.py
app/services/: group.py  group_cache.py  user.py
app/utils/: consistent_hash.py  enums.py  pagination.py
app/websocket/: manager.py
app/websocket/endpoints/: groups.py
app/websocket/handlers/: group.py
app/websocket/helpers/: auth.py
docs/: architecture.drawio.xml  architecture.xml
docs/db/: schema.sql
tests/: config.py  conftest.py  utils.py
tests/integration/: conftest.py
tests/integration/api/: test_auth_apis.py  test_group_apis.py  test_user_apis.py
tests/unit/: config.py  conftest.py
tests/unit/core/: test_security_helpers.py
tests/unit/db/: test_orm_base.py
tests/unit/dependencies/: test_auth_dependencies.py  test_db_dependencies.py  test_group_dependencies.py
tests/unit/schemas/: test_base_schema.py  test_group_schema.py  test_response_schema.py  test_token_schema.py  test_user_schema.py
tests/unit/services/: test_group_service.py  test_user_service.py  test_user_services.py
tests/unit/ultils/: test_consistent_hash.py  test_pagination.py
