[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
exclude = '''
/(
    \.venv
  | \.git
  | \.mypy_cache
  | \.pytest_cache
  | \.vscode
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["app"]
known_third_party = ["fastapi", "sqlalchemy", "pydantic"]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true

[tool.flake8]
max-line-length = 88
exclude = [".git", "__pycache__", ".venv", "build", "dist"]
extend-ignore = ["E203", "W503"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
